Source/WebCore/dom/StyleElement.h
@@ -37,7 +37,7 @@ protected:
     virtual const AtomicString& type() const = 0;
     virtual const AtomicString& media() const = 0;
 
-    StyleSheet* sheet() { return m_sheet.get(); }
+    StyleSheet* sheet() const { return m_sheet.get(); }
 
     bool isLoading() const;
     bool sheetLoaded(Document*);
